--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -459,11 +459,11 @@
   "pli-tv-kd12:6.1.94": "He shouldn’t sit on the same seat as a regular monk. ",
   "pli-tv-kd12:6.1.95": "He shouldn’t sit on a higher seat than a regular monk. ",
   "pli-tv-kd12:6.1.96": "He shouldn’t sit on a seat when a regular monk is sitting on the ground. ",
-  "pli-tv-kd12:6.1.97": "He should not do walking meditation on the same walking path as a regular monk. ",
-  "pli-tv-kd12:6.1.98": "He should not do walking meditation on a higher walking path than a regular monk. ",
-  "pli-tv-kd12:6.1.99": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
-  "pli-tv-kd12:6.1.100": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
-  "pli-tv-kd12:6.1.101": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
+  "pli-tv-kd12:6.1.97": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
+  "pli-tv-kd12:6.1.98": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
+  "pli-tv-kd12:6.1.99": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
+  "pli-tv-kd12:6.1.100": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
+  "pli-tv-kd12:6.1.101": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:6.1.102": "He should not, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
   "pli-tv-kd12:6.1.103": "He should not, in a monastery, stay in the same room as a more senior monk undertaking the trial period. … ",
   "pli-tv-kd12:6.1.104": "He should not, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
