--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -469,9 +469,9 @@
   "pli-tv-kd12:6.1.104": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.105": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.106": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:6.1.107": "He should not sit on the same seat as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:6.1.108": "He should not sit on a higher seat than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:6.1.109": "He should not sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
+  "pli-tv-kd12:6.1.107": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:6.1.108": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:6.1.109": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:6.1.110": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.111": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.112": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
