Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -472,9 +472,9 @@
   "pli-tv-kd12:6.1.107": "He shouldn’t sit on the same seat as a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.108": "He shouldn’t sit on a higher seat than a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.109": "He shouldn’t sit on a seat when a monk deserving rehabilitation is sitting on the ground. ",
-  "pli-tv-kd12:6.1.110": "He should not do walking meditation on the same walking path as a monk deserving rehabilitation. ",
-  "pli-tv-kd12:6.1.111": "He should not do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
-  "pli-tv-kd12:6.1.112": "He should not do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
+  "pli-tv-kd12:6.1.110": "He shouldn’t do walking meditation on the same walking path as a monk deserving rehabilitation. ",
+  "pli-tv-kd12:6.1.111": "He shouldn’t do walking meditation on a higher walking path than a monk deserving rehabilitation. ",
+  "pli-tv-kd12:6.1.112": "He shouldn’t do walking meditation on a walking path when a monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:6.1.113": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:6.1.114": "sends back to the beginning, ",
   "pli-tv-kd12:6.1.115": "or gives the trial period, ",
