Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -516,7 +516,7 @@
   "pli-tv-kd12:9.1.12": "This will affect people’s confidence …” ",
   "pli-tv-kd12:9.1.13": "After rebuking them … ",
   "pli-tv-kd12:9.1.14": "he gave a teaching and addressed the monks: ",
-  "pli-tv-kd12:9.1.15": "“A monk deserving rehabilitation should not consent to: ",
+  "pli-tv-kd12:9.1.15": "“A monk deserving rehabilitation shouldn’t consent to: ",
   "pli-tv-kd12:9.1.16": "Regular monks bowing down to him; ",
   "pli-tv-kd12:9.1.17.1": "Regular monks standing up for him; ",
   "pli-tv-kd12:9.1.17.2": "Regular monks putting the palms of their hands together for him; ",
