--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -526,7 +526,7 @@
   "pli-tv-kd12:9.1.17.6": "Regular monks offering him water for washing his feet and a foot-stool; ",
   "pli-tv-kd12:9.1.17.7": "Regular monks offering him a foot-scraper; ",
   "pli-tv-kd12:9.1.17.8": "Regular monks receiving his bowl and robe; ",
-  "pli-tv-kd12:9.1.18": "Regular monks massaging his back when he is bathing. ",
+  "pli-tv-kd12:9.1.18": "Regular monks massaging his back when he’s bathing. ",
   "pli-tv-kd12:9.1.19": "If he consents to any of these, he commits an offense of wrong conduct. ",
   "pli-tv-kd12:9.1.20": "Monks deserving rehabilitation should bow down to one another according to seniority, and likewise stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs according to seniority when bathing. ",
   "pli-tv-kd12:9.1.21": "Monks deserving rehabilitation should do five things with regular monks according to seniority: ",
