--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -533,10 +533,10 @@
   "pli-tv-kd12:9.1.22": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
   "pli-tv-kd12:9.1.23": "And I will lay down the proper conduct for a monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.25": "This is the proper conduct: ",
-  "pli-tv-kd12:9.1.26": "He should not give the full ordination. ",
-  "pli-tv-kd12:9.1.27.1": "He should not give formal support. ",
-  "pli-tv-kd12:9.1.27.2": "He should not have a novice monk attend on him. ",
-  "pli-tv-kd12:9.1.27.3": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd12:9.1.26": "He shouldn’t give the full ordination. ",
+  "pli-tv-kd12:9.1.27.1": "He shouldn’t give formal support. ",
+  "pli-tv-kd12:9.1.27.2": "He shouldn’t have a novice monk attend on him. ",
+  "pli-tv-kd12:9.1.27.3": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:9.1.27.4": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd12:9.1.27.5": "He should not commit the same offense as the offense for which he deserves to be rehabilitated by the Sangha, nor one that is similar or worse. ",
   "pli-tv-kd12:9.1.27.6": "He should not criticize the legal procedure. ",
