--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -562,11 +562,11 @@
   "pli-tv-kd12:9.1.39": "He shouldn’t go from a monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.40.1": "He shouldn’t go from a non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.40.2": "He shouldn’t go from a non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:9.1.40.3": "He should not go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:9.1.40.4": "He should not go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:9.1.40.5": "He should not go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:9.1.40.6": "He should not go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
-  "pli-tv-kd12:9.1.40.7": "He should not go from a monastery with monks to one with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:9.1.40.3": "He shouldn’t go from a non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:9.1.40.4": "He shouldn’t go from a monastery or non-monastery with monks to a monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:9.1.40.5": "He shouldn’t go from a monastery or non-monastery with monks to a non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:9.1.40.6": "He shouldn’t go from a monastery or non-monastery with monks to a monastery or non-monastery without monks, except together with a regular monk or if there are dangers. ",
+  "pli-tv-kd12:9.1.40.7": "He shouldn’t go from a monastery with monks to one with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.40.8": "He should not go from a monastery with monks to a non-monastery with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.40.9": "He should not go from a monastery with monks to a monastery or non-monastery with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.40.10": "He should not go from a non-monastery with monks to a monastery with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
