Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -577,11 +577,11 @@
   "pli-tv-kd12:9.1.40.15": "He shouldn’t go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to a different community, except together with a regular monk or if there are dangers. ",
   "pli-tv-kd12:9.1.41": "He may go from a monastery with monks to one with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.42": "He may go from a monastery with monks to a non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.43": "He may go from a monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.44.1": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.44.2": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.44.3": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same community if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.44.4": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same community if he knows he will be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.43": "He may go from a monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.44.1": "He may go from a non-monastery with monks to a monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.44.2": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.44.3": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.44.4": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.44.5": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.45": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.46": "He should not, in a monastery, stay in the same room as a regular monk. ",
