Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -582,10 +582,10 @@
   "pli-tv-kd12:9.1.44.2": "He may go from a non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.44.3": "He may go from a non-monastery with monks to a monastery or non-monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.44.4": "He may go from a monastery or non-monastery with monks to a monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.44.5": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.45": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he will be able to arrive on the same day. ",
-  "pli-tv-kd12:9.1.46": "He should not, in a monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:9.1.47": "He should not, in a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:9.1.44.5": "He may go from a monastery or non-monastery with monks to a non-monastery with monks who belong to the same community if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.45": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
+  "pli-tv-kd12:9.1.46": "He shouldn’t, in a monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:9.1.47": "He shouldn’t, in a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:9.1.48": "He should not, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:9.1.49": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:9.1.50": "He should offer a seat to a regular monk. ",
