Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -586,11 +586,11 @@
   "pli-tv-kd12:9.1.45": "He may go from a monastery or non-monastery with monks to a monastery or non-monastery with monks who belong to the same Buddhist sect if he knows he’ll be able to arrive on the same day. ",
   "pli-tv-kd12:9.1.46": "He shouldn’t, in a monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:9.1.47": "He shouldn’t, in a non-monastery, stay in the same room as a regular monk. ",
-  "pli-tv-kd12:9.1.48": "He should not, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
+  "pli-tv-kd12:9.1.48": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a regular monk. ",
   "pli-tv-kd12:9.1.49": "If he sees a regular monk, he should get up from his seat. ",
   "pli-tv-kd12:9.1.50": "He should offer a seat to a regular monk. ",
-  "pli-tv-kd12:9.1.51": "He should not sit on the same seat as a regular monk. ",
-  "pli-tv-kd12:9.1.52": "He should not sit on a higher seat than a regular monk. ",
+  "pli-tv-kd12:9.1.51": "He shouldn’t sit on the same seat as a regular monk. ",
+  "pli-tv-kd12:9.1.52": "He shouldn’t sit on a higher seat than a regular monk. ",
   "pli-tv-kd12:9.1.53": "He should not sit on a seat when a regular monk is sitting on the ground. ",
   "pli-tv-kd12:9.1.54": "He should not do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:9.1.55": "He should not do walking meditation on a higher walking path than a regular monk. ",
