--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -591,10 +591,10 @@
   "pli-tv-kd12:9.1.50": "He should offer a seat to a regular monk. ",
   "pli-tv-kd12:9.1.51": "He shouldn’t sit on the same seat as a regular monk. ",
   "pli-tv-kd12:9.1.52": "He shouldn’t sit on a higher seat than a regular monk. ",
-  "pli-tv-kd12:9.1.53": "He should not sit on a seat when a regular monk is sitting on the ground. ",
-  "pli-tv-kd12:9.1.54": "He should not do walking meditation on the same walking path as a regular monk. ",
-  "pli-tv-kd12:9.1.55": "He should not do walking meditation on a higher walking path than a regular monk. ",
-  "pli-tv-kd12:9.1.56": "He should not do walking meditation on a walking path when a regular monk is walking on the ground. ",
+  "pli-tv-kd12:9.1.53": "He shouldn’t sit on a seat when a regular monk is sitting on the ground. ",
+  "pli-tv-kd12:9.1.54": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
+  "pli-tv-kd12:9.1.55": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
+  "pli-tv-kd12:9.1.56": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:9.1.57": "He should not, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:9.1.58": "He should not, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:9.1.59": "He should not, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
