--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -598,9 +598,9 @@
   "pli-tv-kd12:9.1.57": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:9.1.58": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
   "pli-tv-kd12:9.1.59": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
-  "pli-tv-kd12:9.1.60": "He should not, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
-  "pli-tv-kd12:9.1.61": "He should not, in a monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.62": "He should not, in a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.60": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
+  "pli-tv-kd12:9.1.61": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.62": "He shouldn’t, in a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.63": "He should not, in a monastery or a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.64": "He should not sit on the same seat as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.65": "He should not sit on a higher seat than a more senior monk deserving rehabilitation. ",
