--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -601,9 +601,9 @@
   "pli-tv-kd12:9.1.60": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:9.1.61": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.62": "He shouldn’t, in a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.63": "He should not, in a monastery or a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.64": "He should not sit on the same seat as a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.65": "He should not sit on a higher seat than a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.63": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.64": "He shouldn’t sit on the same seat as a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.65": "He shouldn’t sit on a higher seat than a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.66": "He should not sit on a seat when a more senior monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:9.1.67": "He should not do walking meditation on the same walking path as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.68": "He should not do walking meditation on a higher walking path than a more senior monk deserving rehabilitation. ",
