--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -604,8 +604,8 @@
   "pli-tv-kd12:9.1.63": "He shouldn’t, in a monastery or a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.64": "He shouldn’t sit on the same seat as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.65": "He shouldn’t sit on a higher seat than a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.66": "He should not sit on a seat when a more senior monk deserving rehabilitation is sitting on the ground. ",
-  "pli-tv-kd12:9.1.67": "He should not do walking meditation on the same walking path as a more senior monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.66": "He shouldn’t sit on a seat when a more senior monk deserving rehabilitation is sitting on the ground. ",
+  "pli-tv-kd12:9.1.67": "He shouldn’t do walking meditation on the same walking path as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.68": "He should not do walking meditation on a higher walking path than a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.69": "He should not do walking meditation on a walking path when a more senior monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:9.1.70": "If, as the fourth member of a group, he gives probation, ",
