Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -607,12 +607,12 @@
   "pli-tv-kd12:9.1.66": "He shouldn’t sit on a seat when a more senior monk deserving rehabilitation is sitting on the ground. ",
   "pli-tv-kd12:9.1.67": "He shouldn’t do walking meditation on the same walking path as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.68": "He shouldn’t do walking meditation on a higher walking path than a more senior monk deserving rehabilitation. ",
-  "pli-tv-kd12:9.1.69": "He should not do walking meditation on a walking path when a more senior monk deserving rehabilitation is walking on the ground. ",
+  "pli-tv-kd12:9.1.69": "He shouldn’t do walking meditation on a walking path when a more senior monk deserving rehabilitation is walking on the ground. ",
   "pli-tv-kd12:9.1.70": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:9.1.71": "sends back to the beginning, ",
   "pli-tv-kd12:9.1.72": "or gives the trial period, ",
   "pli-tv-kd12:9.1.73": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
-  "pli-tv-kd12:9.1.74": "The proper conduct of those deserving rehabilitation is finished. ",
+  "pli-tv-kd12:9.1.74": "The proper conduct for those deserving rehabilitation is finished. ",
   "pli-tv-kd12:9.1.75": "The chapter on those on probation is finished. ",
   "pli-tv-kd12:9.1.76": "In this chapter there are five topics. ",
   "pli-tv-kd12:9.1.116": "The chapter on those on probation is finished. "
