Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -171,7 +171,7 @@
   "pli-tv-kd12:4.1.26": "Monks deserving to be sent back to the beginning should bow down to one another according to seniority, and likewise stand up, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another’s backs according to seniority when bathing. ",
   "pli-tv-kd12:4.1.27": "Monks deserving to be sent back to the beginning should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:4.1.28": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
-  "pli-tv-kd12:4.1.29": "And I will lay down the proper conduct for a monk deserving to be sent back to the beginning. ",
+  "pli-tv-kd12:4.1.29": "And now I will lay down the proper conduct for a monk deserving to be sent back to the beginning. ",
   "pli-tv-kd12:4.1.31": "This is the proper conduct: ",
   "pli-tv-kd12:4.1.32": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:4.1.33": "He shouldn’t give formal support. ",
