--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -531,7 +531,7 @@
   "pli-tv-kd12:9.1.20": "Monks deserving rehabilitation should do the following to one another according to seniority:  bow down, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another when bathing. ",
   "pli-tv-kd12:9.1.21": "Monks deserving rehabilitation should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:9.1.22": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
-  "pli-tv-kd12:9.1.23": "And I will lay down the proper conduct for a monk deserving rehabilitation. ",
+  "pli-tv-kd12:9.1.23": "And now I will lay down the proper conduct for a monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.25": "This is the proper conduct: ",
   "pli-tv-kd12:9.1.26": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:9.1.27.1": "He shouldn’t give formal support. ",
