--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -184,7 +184,7 @@
   "pli-tv-kd12:4.1.40": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:4.1.41": "He shouldn’t cancel the invitation of a regular monk. ",
   "pli-tv-kd12:4.1.42": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd12:4.1.43": "He shouldn’t give instructions a regular monk. ",
+  "pli-tv-kd12:4.1.43": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd12:4.1.44": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:4.1.45": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd12:4.1.46": "He shouldn’t remind a regular monk of an offense. ",
