Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -412,7 +412,7 @@
   "pli-tv-kd12:6.1.47": "He shouldn’t associate inappropriately with other monks. ",
   "pli-tv-kd12:6.1.48": "He shouldn’t walk in front of a regular monk. ",
   "pli-tv-kd12:6.1.49": "He shouldn’t sit in front of a regular monk. ",
-  "pli-tv-kd12:6.1.50": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
+  "pli-tv-kd12:6.1.50": "He should be given the last seat, the last bed, and the last dwelling of the Sangha, and he should consent to that. ",
   "pli-tv-kd12:6.1.51": "He shouldn’t attend on a regular monk when going to families. ",
   "pli-tv-kd12:6.1.52": "He shouldn’t be attended on by a regular monk when going to families. ",
   "pli-tv-kd12:6.1.53": "He shouldn’t undertake the practice of staying in the wilderness. ",
