Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -551,7 +551,7 @@
   "pli-tv-kd12:9.1.28": "He shouldn’t associate inappropriately with other monks. ",
   "pli-tv-kd12:9.1.29": "He shouldn’t walk in front of a regular monk. ",
   "pli-tv-kd12:9.1.30": "He shouldn’t sit in front of a regular monk. ",
-  "pli-tv-kd12:9.1.31": "He should be given the last seat, the last bed, and the last dwelling of the Sangha and should consent to that. ",
+  "pli-tv-kd12:9.1.31": "He should be given the last seat, the last bed, and the last dwelling of the Sangha, and he should consent to that. ",
   "pli-tv-kd12:9.1.32": "He shouldn’t attend on a regular monk when going to families ",
   "pli-tv-kd12:9.1.33": "He shouldn’t be attended on by a regular monk when going to families ",
   "pli-tv-kd12:9.1.34": "He shouldn’t undertake the practice of staying in the wilderness ",
