--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -231,7 +231,7 @@
   "pli-tv-kd12:4.1.87": "He should offer a seat to a regular monk. ",
   "pli-tv-kd12:4.1.88": "He shouldn’t sit on the same seat as a regular monk. ",
   "pli-tv-kd12:4.1.89": "He shouldn’t sit on a higher seat than a regular monk. ",
-  "pli-tv-kd12:4.1.90": "He shouldn’t sit on a seat when a regular monk sits on the ground ",
+  "pli-tv-kd12:4.1.90": "He shouldn’t sit on a seat when a regular monk is sitting on the ground ",
   "pli-tv-kd12:4.1.91": "He shouldn’t do walking meditation on the same walking path as a regular monk. ",
   "pli-tv-kd12:4.1.92": "He shouldn’t do walking meditation on a higher walking path than a regular monk. ",
   "pli-tv-kd12:4.1.93": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
