--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -464,7 +464,7 @@
   "pli-tv-kd12:6.1.99": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:6.1.100": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:6.1.101": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:6.1.102": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:6.1.102": "He shouldn’t, in a monastery, stay in the same room as a monk deserving the trial period. … ",
   "pli-tv-kd12:6.1.103": "He shouldn’t, in a monastery, stay in the same room as a more senior monk undertaking the trial period. … ",
   "pli-tv-kd12:6.1.104": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:6.1.105": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
