--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -597,7 +597,7 @@
   "pli-tv-kd12:9.1.56": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:9.1.57": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:9.1.58": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:9.1.59": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:9.1.59": "He shouldn’t, in a monastery, stay in the same room as a monk deserving the trial period. … ",
   "pli-tv-kd12:9.1.60": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:9.1.61": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
   "pli-tv-kd12:9.1.62": "He shouldn’t, in a non-monastery, stay in the same room as a more senior monk deserving rehabilitation. ",
