Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -103,7 +103,7 @@
   "pli-tv-kd12:1.4.11": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:1.4.12": "He shouldn’t, in a monastery, stay in the same room as a more senior monk on probation. … ",
   "pli-tv-kd12:1.4.13": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:1.4.14": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:1.4.14": "He shouldn’t, in a monastery, stay in the same room as a monk deserving the trial period. … ",
   "pli-tv-kd12:1.4.15": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:1.4.16": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:1.4.17": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
