Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -237,7 +237,7 @@
   "pli-tv-kd12:4.1.93": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:4.1.94": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:4.1.95": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:4.1.96": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:4.1.96": "He shouldn’t, in a monastery, stay in the same room as a monk deserving the trial period. … ",
   "pli-tv-kd12:4.1.97": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:4.1.98": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:4.1.99": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
