--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -256,7 +256,7 @@
   "pli-tv-kd12:5.1.0": "3. The proper conduct for those deserving the trial period ",
   "pli-tv-kd12:5.1.1": "At this time monks deserving the trial period consented to regular monks bowing down to them, standing up for them, raising their joined palms to them, doing acts of respect toward them, offering them a seat, offering them a bed, offering them water for washing their feet and a foot stool, offering them a foot scraper, receiving their bowl and robe, and massaging their backs when bathing. ",
   "pli-tv-kd12:5.1.2": "The monks of few desires complained and criticized them, ",
-  "pli-tv-kd12:5.1.3": "“How can monks deserving to be given the trial period consent to these things?” ",
+  "pli-tv-kd12:5.1.3": "“How can monks deserving the trial period consent to these things?” ",
   "pli-tv-kd12:5.1.4": "The monks told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
   "pli-tv-kd12:5.1.5": "“Is it true, monks, that monks deserving to be given the trial period consent to these things?” ",
   "pli-tv-kd12:5.1.6": "“It’s true, Sir.” ",
