--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -258,7 +258,7 @@
   "pli-tv-kd12:5.1.2": "The monks of few desires complained and criticized them, ",
   "pli-tv-kd12:5.1.3": "“How can monks deserving the trial period consent to these things?” ",
   "pli-tv-kd12:5.1.4": "The monks told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
-  "pli-tv-kd12:5.1.5": "“Is it true, monks, that monks deserving to be given the trial period consent to these things?” ",
+  "pli-tv-kd12:5.1.5": "“Is it true, monks, that monks deserving the trial period consent to these things?” ",
   "pli-tv-kd12:5.1.6": "“It’s true, Sir.” ",
   "pli-tv-kd12:5.1.7": "The Buddha rebuked them … ",
   "pli-tv-kd12:5.1.8": "“It’s not suitable … ",
