--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -262,7 +262,7 @@
   "pli-tv-kd12:5.1.6": "“It’s true, Sir.” ",
   "pli-tv-kd12:5.1.7": "The Buddha rebuked them … ",
   "pli-tv-kd12:5.1.8": "“It’s not suitable … ",
-  "pli-tv-kd12:5.1.9": "How can monks deserving to be given the trial period consent to these things? ",
+  "pli-tv-kd12:5.1.9": "How can monks deserving the trial period consent to these things? ",
   "pli-tv-kd12:5.1.10": "This will affect people’s confidence …” ",
   "pli-tv-kd12:5.1.11": "After rebuking them … ",
   "pli-tv-kd12:5.1.12": "he gave a teaching and addressed the monks: ",
