Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -281,7 +281,7 @@
   "pli-tv-kd12:5.1.19": "Monks deserving the trial period should do the following to one another according to seniority:  bow down, raise their joined palms, do acts of respect, offer a seat, offer a bed, offer water for washing the feet and a foot stool, offer a foot scraper, receive bowl and robe, and massage one another when bathing. ",
   "pli-tv-kd12:5.1.20": "Monks deserving the trial period should do five things with regular monks according to seniority: ",
   "pli-tv-kd12:5.1.21": "the observance-day ceremony, the invitation ceremony, distributing rainy-season robes, meal invitations, and meals. ",
-  "pli-tv-kd12:5.1.22": "And now I will lay down the proper conduct for a monk deserving to be given the trial period. ",
+  "pli-tv-kd12:5.1.22": "And now I will lay down the proper conduct for a monk deserving the trial period. ",
   "pli-tv-kd12:5.1.24": "This is the proper conduct: ",
   "pli-tv-kd12:5.1.25": "He shouldn’t give the full ordination. ",
   "pli-tv-kd12:5.1.26.1": "He shouldn’t give formal support. ",
