Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -288,7 +288,7 @@
   "pli-tv-kd12:5.1.26.2": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd12:5.1.26.3": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd12:5.1.26.4": "Even if appointed, he shouldn’t instruct the nuns. ",
-  "pli-tv-kd12:5.1.26.5": "He shouldn’t commit the same offense as the offense for which he deserves to be given the trial period by the Sangha, nor one that is similar or worse. ",
+  "pli-tv-kd12:5.1.26.5": "He shouldn’t commit the same offense as the offense for which he deserves the trial period by the Sangha, nor one that is similar or worse. ",
   "pli-tv-kd12:5.1.26.6": "He shouldn’t criticize the legal procedure. ",
   "pli-tv-kd12:5.1.26.7": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:5.1.26.8": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
