Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -347,7 +347,7 @@
   "pli-tv-kd12:5.1.73": "He shouldn’t do walking meditation on a walking path when a regular monk is walking on the ground. ",
   "pli-tv-kd12:5.1.74": "He shouldn’t, in a monastery, stay in the same room as a monk on probation. … ",
   "pli-tv-kd12:5.1.75": "He shouldn’t, in a monastery, stay in the same room as a monk deserving to be sent back to the beginning. … ",
-  "pli-tv-kd12:5.1.76": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving to be given the trial period. … ",
+  "pli-tv-kd12:5.1.76": "He shouldn’t, in a monastery, stay in the same room as a more senior monk deserving the trial period. … ",
   "pli-tv-kd12:5.1.77": "He shouldn’t, in a monastery, stay in the same room as a monk undertaking the trial period. … ",
   "pli-tv-kd12:5.1.78": "He shouldn’t, in a monastery, stay in the same room as a monk deserving rehabilitation. ",
   "pli-tv-kd12:5.1.79": "He shouldn’t, in a non-monastery, stay in the same room as a monk deserving rehabilitation. ",
