--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -478,7 +478,7 @@
   "pli-tv-kd12:6.1.113": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:6.1.114": "sends back to the beginning, ",
   "pli-tv-kd12:6.1.115": "or gives the trial period, ",
-  "pli-tv-kd12:6.1.116": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
+  "pli-tv-kd12:6.1.116": "or as the twentieth member of a group, he rehabilitates, it’s invalid and not to be done.” ",
   "pli-tv-kd12:7.1.1": "Soon afterwards Venerable Upāli went to the Buddha, bowed, sat down, ",
   "pli-tv-kd12:7.1.2": "and said, ",
   "pli-tv-kd12:7.1.3": "“How many things are there, Venerable Sir, that stop a monk undertaking the trial period from counting a particular day toward his trial period?” ",
