Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -611,7 +611,7 @@
   "pli-tv-kd12:9.1.70": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:9.1.71": "sends back to the beginning, ",
   "pli-tv-kd12:9.1.72": "or gives the trial period, ",
-  "pli-tv-kd12:9.1.73": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
+  "pli-tv-kd12:9.1.73": "or as the twentieth member of a group, he rehabilitates, it’s invalid and not to be done.” ",
   "pli-tv-kd12:9.1.74": "The proper conduct for those deserving rehabilitation is finished. ",
   "pli-tv-kd12:9.1.75": "The chapter on those on probation is finished. ",
   "pli-tv-kd12:9.1.76": "In this chapter there are five topics. ",
