Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -117,7 +117,7 @@
   "pli-tv-kd12:1.4.25": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:1.4.26": "sends back to the beginning, ",
   "pli-tv-kd12:1.4.27": "or gives the trial period, ",
-  "pli-tv-kd12:1.4.28": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
+  "pli-tv-kd12:1.4.28": "or as the twentieth member of a group, he rehabilitates, it’s invalid and not to be done.” ",
   "pli-tv-kd12:1.4.29": "The ninety-four kinds of proper conduct for one on probation are finished. ",
   "pli-tv-kd12:2.1.1": "Soon afterwards Venerable Upāli went to the Buddha, ",
   "pli-tv-kd12:2.1.2": "bowed, sat down, ",
