Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -251,7 +251,7 @@
   "pli-tv-kd12:4.1.107": "If, as the fourth member of a group, he gives probation, ",
   "pli-tv-kd12:4.1.108": "sends back to the beginning, ",
   "pli-tv-kd12:4.1.109": "or gives the trial period, ",
-  "pli-tv-kd12:4.1.110": "or as the twentieth member of a group, he rehabilitates, it is invalid and not to be done.” ",
+  "pli-tv-kd12:4.1.110": "or as the twentieth member of a group, he rehabilitates, it’s invalid and not to be done.” ",
   "pli-tv-kd12:4.1.111": "The proper conduct for those deserving to be sent back to the beginning is finished. ",
   "pli-tv-kd12:5.1.0": "3. The proper conduct for those deserving the trial period ",
   "pli-tv-kd12:5.1.1": "At this time monks deserving the trial period consented to regular monks bowing down to them, standing up for them, raising their joined palms to them, doing acts of respect toward them, offering them a seat, offering them a bed, offering them water for washing their feet and a foot stool, offering them a foot scraper, receiving their bowl and robe, and massaging their backs when bathing. ",
