Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -485,7 +485,7 @@
   "pli-tv-kd12:7.1.4": "“There are four such things, Upāli: ",
   "pli-tv-kd12:7.1.5": "he stays in the same room as a regular monk; he stays apart from other monks; he doesn’t inform other monks of his status; he travels without a group.” ",
   "pli-tv-kd12:8.1.1": "On one occasion a large sangha of monks had gathered at Sāvatthī. ",
-  "pli-tv-kd12:8.1.2": "The monks undertaking the trial period were not able to fulfill their duties. ",
+  "pli-tv-kd12:8.1.2": "The monks undertaking the trial period were unable to fulfill their duties. ",
   "pli-tv-kd12:8.1.3": "They told the Buddha. ",
   "pli-tv-kd12:8.1.4": "“I allow you to set aside the trial period. ",
   "pli-tv-kd12:8.1.5": "And it should be done like this. ",
