Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -492,7 +492,7 @@
   "pli-tv-kd12:8.1.6": "The monk undertaking the trial period should approach a monk, put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say, ",
   "pli-tv-kd12:8.1.7": "‘I set aside the trial period,’ ",
   "pli-tv-kd12:8.1.9": "or ‘I set aside the proper conduct.’” ",
-  "pli-tv-kd12:8.1.11": "Soon afterwards the monks at Sāvatthī left in various directions. ",
+  "pli-tv-kd12:8.1.11": "Soon afterwards the monks at Sāvatthī left for various destinations. ",
   "pli-tv-kd12:8.1.12": "The monks undertaking the trial period were again able to fulfill their duties. ",
   "pli-tv-kd12:8.1.13": "They told the Buddha. ",
   "pli-tv-kd12:8.1.14": "“I allow you to take up the trial period. ",
