Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.81:2.1": "Nicht lange, nachdem der Buddha gegangen war, ging einer der Mönche zum Ehrwürdigen Ānanda und unterrichtete ihn darüber. ",
   "sn22.81:2.3": "Ānanda sagte: „Werter Freund, wenn der Buddha so weggeht, heißt das, er will allein bleiben. ",
   "sn22.81:2.4": "Niemand sollte ihm jetzt folgen.“ ",
-  "sn22.81:3.1": "Der Buddha wanderte Stück für Stück, bis er nach Pārileyya kam, "
+  "sn22.81:3.1": "Der Buddha wanderte Stück für Stück, bis er nach Pārileyya kam, ",
+  "sn22.81:3.2": "und blieb dort am Fuß eines glückverheißenden Salbaumes. "
 }
